[gd_scene load_steps=17 format=3 uid="uid://c8kfa5lkp3507"]

[ext_resource type="Texture2D" uid="uid://dbjx8g0r2im01" path="res://art/New Piskel-1.png (1).png" id="1_0dekw"]
[ext_resource type="Script" uid="uid://bjw5t3bkou6n" path="res://scripts/battle.gd" id="1_m8xym"]
[ext_resource type="PackedScene" uid="uid://bk7lwx77e8p2n" path="res://scenes/battle_player.tscn" id="2_o58lv"]
[ext_resource type="PackedScene" uid="uid://drwitctknrrla" path="res://scenes/battle_enemy.tscn" id="3_shw0s"]
[ext_resource type="FontFile" uid="uid://d1dqeqtblupfy" path="res://fonts/ice-pixel7/ice_pixel-7.ttf" id="5_jd4r1"]
[ext_resource type="Texture2D" uid="uid://dt0qyli8pd8ue" path="res://art/health-2.png" id="6_phsch"]
[ext_resource type="Texture2D" uid="uid://ch7kh00pv2qjy" path="res://art/health-3.png" id="7_oxijl"]
[ext_resource type="Texture2D" uid="uid://cvwovhsc8pjn2" path="res://art/stamina2.png" id="8_5y4i1"]
[ext_resource type="Texture2D" uid="uid://dytwqmirirvnv" path="res://art/health-1.png" id="8_j5dr3"]
[ext_resource type="Texture2D" uid="uid://dclajsrdwp8od" path="res://art/stamina1.png" id="9_480h7"]
[ext_resource type="AudioStream" uid="uid://l5xms05obtfb" path="res://audio/561647__mattruthsound__hit-punch-cloth-pillow-bedding-006.wav" id="9_xu7sj"]
[ext_resource type="AudioStream" uid="uid://cp2xw7g2k5qpi" path="res://audio/intense-gritty-hard-rock-270016.mp3" id="10_a7yp5"]
[ext_resource type="AudioStream" uid="uid://dq4ahxv7leybf" path="res://audio/retro-game-arcade-short-236130.mp3" id="11_7a8r6"]

[sub_resource type="LabelSettings" id="LabelSettings_ut6vo"]
font = ExtResource("5_jd4r1")
font_size = 60
font_color = Color(0.180655, 0.567819, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_2xppt"]
font = ExtResource("5_jd4r1")
font_size = 60
font_color = Color(0.537956, 0.00916588, 9.62615e-08, 1)

[sub_resource type="LabelSettings" id="LabelSettings_k6ivh"]
font = ExtResource("5_jd4r1")
font_size = 60
font_color = Color(0.537956, 0.00916588, 9.62615e-08, 1)

[node name="battle" type="Node2D" node_paths=PackedStringArray("battle_enemy")]
script = ExtResource("1_m8xym")
battle_enemy = NodePath("battle_enemy")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1000, 510)
texture = ExtResource("1_0dekw")

[node name="battle_player" parent="." instance=ExtResource("2_o58lv")]
position = Vector2(666, 543)
scale = Vector2(5, 5)

[node name="Camera2D" type="Camera2D" parent="."]
limit_left = 0
limit_top = 0
limit_right = 2000
limit_bottom = 1000

[node name="battle_enemy" parent="." instance=ExtResource("3_shw0s")]
position = Vector2(1648.35, 318.641)
scale = Vector2(3, 3)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="health" type="TextureProgressBar" parent="CanvasLayer"]
texture_filter = 1
offset_left = 49.0
offset_top = 43.0
offset_right = 249.0
offset_bottom = 63.0
scale = Vector2(3, 3)
texture_under = ExtResource("6_phsch")
texture_over = ExtResource("7_oxijl")
texture_progress = ExtResource("8_j5dr3")

[node name="enemy_health" type="TextureProgressBar" parent="CanvasLayer"]
offset_left = 1435.0
offset_top = 44.0
offset_right = 1635.0
offset_bottom = 64.0
scale = Vector2(2, 2)
texture_under = ExtResource("6_phsch")
texture_over = ExtResource("7_oxijl")
texture_progress = ExtResource("8_j5dr3")

[node name="magic" type="TextureProgressBar" parent="CanvasLayer"]
texture_filter = 1
offset_left = 49.0
offset_top = 113.0
offset_right = 249.0
offset_bottom = 133.0
scale = Vector2(3, 1)
texture_under = ExtResource("8_5y4i1")
texture_over = ExtResource("7_oxijl")
texture_progress = ExtResource("9_480h7")

[node name="heal" type="Label" parent="CanvasLayer"]
offset_left = 449.0
offset_top = 309.0
offset_right = 489.0
offset_bottom = 332.0
label_settings = SubResource("LabelSettings_ut6vo")

[node name="player_damage" type="Label" parent="CanvasLayer"]
offset_left = 1412.0
offset_top = 155.0
offset_right = 1452.0
offset_bottom = 178.0
label_settings = SubResource("LabelSettings_2xppt")

[node name="enemy_damage" type="Label" parent="CanvasLayer"]
offset_left = 409.0
offset_top = 286.0
offset_right = 449.0
offset_bottom = 309.0
label_settings = SubResource("LabelSettings_k6ivh")

[node name="fight_menu" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/fight_menu"]
layout_mode = 0
offset_left = 2.0
offset_top = 882.0
offset_right = 2004.0
offset_bottom = 1020.0
color = Color(0.67069, 0.67069, 0.67069, 1)

[node name="fight" type="Button" parent="CanvasLayer/fight_menu"]
layout_mode = 0
offset_left = 127.0
offset_top = 918.0
offset_right = 252.0
offset_bottom = 986.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_jd4r1")
theme_override_font_sizes/font_size = 60
text = "Fight"

[node name="items" type="Button" parent="CanvasLayer/fight_menu"]
layout_mode = 0
offset_left = 617.0
offset_top = 918.0
offset_right = 754.0
offset_bottom = 986.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_jd4r1")
theme_override_font_sizes/font_size = 60
text = "Items"

[node name="inspect" type="Button" parent="CanvasLayer/fight_menu"]
layout_mode = 0
offset_left = 1134.0
offset_top = 918.0
offset_right = 1310.0
offset_bottom = 986.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_jd4r1")
theme_override_font_sizes/font_size = 60
text = "Inspect"

[node name="defend" type="Button" parent="CanvasLayer/fight_menu"]
layout_mode = 0
offset_left = 1649.0
offset_top = 918.0
offset_right = 1804.0
offset_bottom = 986.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_jd4r1")
theme_override_font_sizes/font_size = 60
text = "Defend
"

[node name="fightList" type="ItemList" parent="CanvasLayer/fight_menu"]
visible = false
texture_filter = 1
layout_mode = 0
offset_left = 127.0
offset_top = 735.0
offset_right = 284.0
offset_bottom = 881.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_jd4r1")
theme_override_font_sizes/font_size = 40
item_count = 3
item_0/text = "slash"
item_1/text = "magica"
item_2/text = "lifesteal"

[node name="itemList" type="ItemList" parent="CanvasLayer/fight_menu"]
visible = false
layout_mode = 0
offset_left = 617.0
offset_top = 735.0
offset_right = 777.0
offset_bottom = 882.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_jd4r1")
theme_override_font_sizes/font_size = 40
item_count = 1
item_0/text = "cheese"

[node name="inspectList" type="ItemList" parent="CanvasLayer/fight_menu"]
visible = false
layout_mode = 0
offset_left = 1134.0
offset_top = 735.0
offset_right = 1306.0
offset_bottom = 882.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_jd4r1")
theme_override_font_sizes/font_size = 40
item_count = 1
item_0/text = "slime"

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(1649, 319)

[node name="attack_timer" type="Timer" parent="."]
one_shot = true

[node name="win_timer" type="Timer" parent="."]
wait_time = 3.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_xu7sj")
volume_db = 10.0

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_a7yp5")
volume_db = -15.0
autoplay = true
parameters/looping = true

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_7a8r6")
volume_db = -10.0

[connection signal="pressed" from="CanvasLayer/fight_menu/fight" to="." method="_on_fight_pressed"]
[connection signal="pressed" from="CanvasLayer/fight_menu/items" to="." method="_on_items_pressed"]
[connection signal="pressed" from="CanvasLayer/fight_menu/inspect" to="." method="_on_inspect_pressed"]
[connection signal="pressed" from="CanvasLayer/fight_menu/defend" to="." method="_on_defend_pressed"]
[connection signal="item_selected" from="CanvasLayer/fight_menu/fightList" to="." method="_on_fight_list_item_selected"]
[connection signal="timeout" from="attack_timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="win_timer" to="." method="_on_win_timer_timeout"]
